// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimerMinutes /> timeSince difference greater than an hour should render in hours "h" 1`] = `
<span>
  2
  <FormattedMessage
    defaultMessage="h"
    id="app.components.TimerMinutes.hours"
    values={Object {}}
  />
</span>
`;

exports[`<TimerMinutes /> timeSince difference less than a minute should render "Just now" 1`] = `
<span>
  <FormattedMessage
    defaultMessage="Just Now"
    id="app.components.TimerMinutes.justNow"
    values={Object {}}
  />
</span>
`;

exports[`<TimerMinutes /> timeSince difference less than an hour should render in minutes "m" 1`] = `
<span>
  2
  <FormattedMessage
    defaultMessage="m"
    id="app.components.TimerMinutes.minutes"
    values={Object {}}
  />
</span>
`;
